# gtk

./: README.md  README_FR.md  claude-watcher-gtk.py  install.sh  pyproject.toml
.github/workflows/: release.yml
doc/: ARCHITECTURE.md
