[project]
name = "claude-watcher-gtk"
version = "0.21.0"
description = "GTK3 desktop widget that monitors running Claude Code sessions"
requires-python = ">=3.10"
dependencies = [
    "pygobject>=3.56.3",
]

[tool.uv]
package = false
# pygobject builds from source: needs apt build deps (libgirepository-2.0-dev,
# libcairo2-dev, gcc). Runtime typelibs (gir1.2-gtk-3.0, gir1.2-wnck-3.0, ...)
# still come from apt — see install.sh. System interpreter keeps the venv ABI
# aligned with the distro GTK stack.
python-preference = "only-system"
